# JAC

./: .env.template  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  PROGRESS.md  README.md  justfile  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  docs-deploy.yml
docs/: architecture.md  changelog.md  idea.md  index.md  progress-a2a.md  progress-archive-2026-05.md  progress-history.md  progress-roadmap.md  progress.md
docs/design/: acp-surface.md  cost-efficient-orchestration.md  documentation-strategy.md  web-surface.md  web-ui-redesign.md
docs/design/audit/: 2026-05-30-review.md  drift-matrix.md
docs/developer/: capabilities.md  codebase-map.md  contributing.md  module-strategy.md
docs/overrides/: main.html
docs/snapshots/: template.md  v0.5.0.md  v0.6.0.md
docs/stylesheets/: minion-lab.css
docs/usage/: cli.md  examples.md  features.md
docs/user-guide/: a2a-operator.md  cli-reference.md  configuration.md  cost-controls.md  examples.md  getting-started.md  mcp.md  sessions-and-memory.md  skills.md  web-ui.md
examples/data-analyst-a2a/: README.md  pyproject.toml  sample-data.csv  server.py
ref/: chat_page_ref.html
scripts/: check_drift.py
src/jac/: __init__.py  __main__.py  config.py  defaults.yaml  errors.py  profiles.py  profiles_crud.py  profiles_io.py  sdk.py  secrets.py
src/jac/capabilities/: __init__.py  approval.py  clarify.py  context.py  filesystem.py  history.py  hooks.py  mcp.py  memory.py  observability.py  plan.py  process.py  search.py  shell.py  skills.py  sub_agent.py  web.py
src/jac/capabilities/a2a/: __init__.py  _files.py  audit.py  auth.py  auth_strategies.py  card.py  client.py  guest.py  guest_files.py  server.py  storage.py
src/jac/cli/: __init__.py  _a2a_banner.py  a2a.py  app.py  editor.py  init.py  keys_cmd.py  profile_view.py  profiles_cmd.py  renderer.py  repl.py  session_view.py  sessions_cmd.py  statusbar.py  terminal.py
src/jac/cli/slash/: __init__.py  context.py  registry.py  render.py  result.py
src/jac/data/: defaults.yaml  providers.yaml
src/jac/prompts/: a2a_guest_addendum.md  gru_accept_edits.md  gru_bidirectional.md  gru_plan_mode.md  gru_system.md  sub_agent_system.md
src/jac/providers/: __init__.py  registry.py
src/jac/runtime/: __init__.py  approval.py  bootstrap.py  bus.py  control.py  driver.py  events.py  gru.py  hooks.py  modes.py  observability.py  session.py  session_ctx.py  sub_agent.py  sub_agent_usage.py  tool_summarize.py  usage.py
src/jac/runtime/sub_agent/: __init__.py  packet.py  runner.py  state.py  suspend.py  tiers.py  tools.py
src/jac/tools/: __init__.py  decorator.py  toolset.py
src/jac/web/: __init__.py  actions.py  app.py  chat.py  panel.py  server.py
src/jac/web/static/: chat.js  jac.css  ui.js
src/jac/web/templates/: _page.html  base.html  (+6 more)
src/jac/workspace/: __init__.py  bootstrap.py  config_io.py  config_loader.py  context.py  paths.py  prompts.py
tests/: conftest.py  test_a2a_audit.py  test_a2a_auth.py  test_a2a_auth_strategies.py  test_a2a_card.py  test_a2a_client.py  test_a2a_guest.py  test_a2a_guest_files.py  test_a2a_server.py  test_a2a_slash.py  test_a2a_storage.py  test_budget_slash.py  test_config.py  test_context_capability.py  test_control.py  test_driver.py  test_editor.py  test_history.py  test_hitl_feedback.py  test_mcp.py  test_memory.py  test_modes.py  test_plan_persistence.py  test_profiles.py  test_prompt_cache_stability.py  test_provider_registry.py  test_secrets.py  test_session.py  test_skills.py  test_slash.py  test_statusbar.py  test_sub_agent.py  test_terminal.py  test_tool_decorator.py  test_tool_summarize.py  test_turn_recovery.py  test_usage.py  test_web_backends.py  test_web_chat.py  test_web_config.py  (+4 more)
(+47 files in other folders)
