[project]
name = "jac"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fasta2a[pydantic-ai]>=0.6.1",
    "logfire>=4.33.0",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.13.4",
    "pydantic-ai-slim[anthropic,cli,duckduckgo,evals,fastmcp,google,logfire,mistral,openai,openrouter]>=1.98.0",
    "pydantic-settings>=2.14.1",
    "rich>=15.0.0",
    "typer>=0.25.1",
]
