[project]
name = "jac"
version = "0.1.0"
description = "Local-first AI coworker harness built on Pydantic AI."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fasta2a[pydantic-ai]>=0.6.1",
    "keyring>=25.0",
    "logfire>=4.33.0",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.13.4",
    "pydantic-ai-slim[anthropic,cli,duckduckgo,evals,fastmcp,google,logfire,mistral,openai,openrouter]>=1.98.0",
    "pydantic-settings[yaml]>=2.14.1",
    "rich>=15.0.0",
    "typer>=0.25.1",
]

[project.scripts]
jac = "jac.cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jac"]

[dependency-groups]
dev = [
    "types-pyyaml>=6.0.12.20260518",
]
