[project]
name = "jac"
version = "0.1.2"
description = "Local-first AI coworker harness built on Pydantic AI."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fasta2a[pydantic-ai]>=0.6.1",
    "keyring>=25.0",
    "logfire>=4.33.0",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.13.4",
    "pydantic-ai-slim[anthropic,cli,duckduckgo,evals,fastmcp,google,logfire,mistral,openai,openrouter,web-fetch]>=1.98.0",
    "pydantic-settings[yaml]>=2.14.1",
    "rich>=15.0.0",
    "typer>=0.25.1",
]

[project.scripts]
jac = "jac.cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jac"]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "ty>=0.0.1a8",
    "types-pyyaml>=6.0.12.20260518",
    "zensical>=0.0.43",
]

# ---------------------------------------------------------------------------
# ruff — linter + formatter
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = [".agents", "site"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501", # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# ty — Astral's type checker
# ---------------------------------------------------------------------------
[tool.ty.src]
root = "./src"

[tool.ty.environment]
python-version = "3.13"
